--- a/src/components/Pages/ViewProduct.css
+++ b/src/components/Pages/ViewProduct.css
@@ -30,7 +30,7 @@
 
 .vp_image {
   width: 250px;
-  height: 300px;
+  height: 280px;
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -208,9 +208,13 @@ label:last-child span {
   .vp_cover {
     flex-direction: column;
   }
+
+  .vp_image_cover {
+    height: 260px;
+  }
   .vp_image {
     width: 100%;
-    height: 100%;
+    height: 280px;
   }
   .vp_title {
     font-size: 28px;
@@ -243,6 +247,7 @@ label:last-child span {
   .vp_discount {
     font-size: 22px;
   }
-}
-@media screen and (max-width: 500px) {
+  .vp_image {
+    height: 250px;
+  }
 }
