--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@ button {
   font-size: inherit;
 }
 
+a,
 input {
   box-shadow: none !important;
 }
@@ -31,6 +32,7 @@ input[type="number"] {
 }
 
 .no_products {
+  margin: 15% 0;
   color: red;
 }
 
@@ -38,4 +40,10 @@ input[type="number"] {
   width: 30px;
   height: 30px;
   background-size: cover;
+}
+
+@media screen and (max-width: 1000px) {
+  .no_products {
+    margin: 20% 0;
+  }
 }
