--- a/src/components/Pages/ViewProduct.css
+++ b/src/components/Pages/ViewProduct.css
@@ -26,6 +26,7 @@
 
 .vp_image_cover {
   margin-right: 100px;
+  margin-bottom: 30px;
 }
 
 .vp_image {
@@ -37,9 +38,10 @@
 
 .vp_title {
   width: 80%;
-  margin-top: 50px;
+  margin-bottom: 20px;
+  /* margin-top: 50px; */
   font-size: 34px;
-  font-weight: 900;
+  font-weight: 600;
 }
 
 .vp_rating b {
@@ -61,12 +63,12 @@
 .deal {
   margin: -10px 0 5px 0;
   padding: 3px;
-  background-color: red;
-  width: 200px;
+  background-color: rgb(255, 0, 0);
+  width: 250px;
   height: 30px;
   text-align: center;
   color: white;
-  font-weight: bold;
+  /* font-weight: bold; */
   border-radius: 5px;
 }
 
@@ -75,7 +77,7 @@
 }
 
 .vp_discount {
-  font-weight: bold;
+  /* font-weight: bold; */
   font-size: 24px;
 }
 
@@ -216,6 +218,9 @@ label:last-child span {
     width: 100%;
     height: 280px;
   }
+  .vp_title_des {
+    display: none;
+  }
   .vp_title {
     font-size: 28px;
   }
@@ -249,5 +254,10 @@ label:last-child span {
   }
   .vp_image {
     height: 250px;
+  }
+}
+@media screen and (min-width: 800px) {
+  .vp_title {
+    display: none;
   }
 }
