--- a/src/components/ui/Hamburger.css
+++ b/src/components/ui/Hamburger.css
@@ -4,7 +4,7 @@
   padding: 8px;
   width: 40px;
   height: 40px;
-  background-color: rgb(44, 49, 49);
+  /* background-color: rgb(44, 49, 49); */
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -13,7 +13,7 @@
 .ham {
   width: 30px;
   height: 3px;
-  background-color: rgb(251, 239, 68);
+  background-color: rgb(0, 0, 0);
   border: 1px solid black;
   border-radius: 5px;
   transition: all 0.5s ease;
