--- a/src/components/ui/Slider.css
+++ b/src/components/ui/Slider.css
@@ -1,11 +1,15 @@
 .slider {
   position: fixed;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   right: 0;
   top: 60px;
   width: 400px;
   height: 100%;
   z-index: 2;
-  background-color: rgb(215, 250, 238);
+
+  background-color: rgb(216, 234, 246);
   transform: translateX(100%);
   transition: all 1s ease;
 }
@@ -13,6 +17,15 @@
 .slide_open {
   transform: translateX(0);
   transition: all 1s ease;
+}
+
+.logout_user_btn {
+  margin-top: 250px;
+  border-radius: 5px;
+  width: 150px;
+  height: 40px;
+  background-color: black;
+  color: white;
 }
 
 @media screen and (max-width: 600px) {
