--- a/src/components/utilities/Pagination.css
+++ b/src/components/utilities/Pagination.css
@@ -15,14 +15,14 @@
 
 .pageno {
   margin: 0 10px;
-  background-color: rgb(153, 207, 254);
+  background-color: rgb(153, 225, 254);
   font-weight: bold;
   border: 2px solid black;
-  border-radius: 10px 5px 10px 5px;
-  width: 50px;
-  height: 50px;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
 }
 
 .clicked {
-  background-color: rgb(225, 241, 255);
+  background-color: rgb(249, 225, 255);
 }
