--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,10 @@
 
 body {
   margin: 0px;
-  font-family: "Istok Web", sans-serif;
+
+  /* font-family: "Crimson Text", serif; */
+  font-family: sans-serif, "roboto";
+  /* font-family: "Istok Web", sans-serif; */
 }
 
 button {
@@ -13,6 +16,11 @@ button {
   color: inherit;
   padding: 0;
   font-size: inherit;
+}
+
+button:hover {
+  transform: scale(1.1);
+  opacity: 0.8;
 }
 
 a,
