--- a/src/components/Pages/ProductsPage.css
+++ b/src/components/Pages/ProductsPage.css
@@ -48,8 +48,8 @@
 .search_filter {
   position: relative;
   padding: 0 20px;
-  margin-top: -30px;
-  height: 150px;
+  margin: 20px 0;
+/*   height: 150px; */
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -99,8 +99,8 @@
 }
 @media screen and (max-width: 500px) {
   .search_filter {
-    margin-top: 0px;
-    padding: 0 60px;
+/*     margin-top: 0px;
+    padding: 0 60px; */
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
